update property injection